feat: add sesi API
